# Catalog-of-high-z-QSOs

./: AA61_Fan_qso_database.csv  QSOs  README.md  generate_yml.py  list.yaml  setup.cfg  test_list.py
docs/: config.yml  index.html
docs/QSOs/: Banados2014_J122913.21+041927.70.yml  Banados2015_J034141.86-004812.74.yml  Banados2015_J090132.65+161506.84.yml  Banados2016_J000121.63+265009.18.yml  Banados2016_J000825.77-062604.42.yml  Banados2016_J001915.38-241756.98.yml  Banados2016_J012541.12-255256.24.yml  Banados2016_J013201.70-021603.11.yml  Banados2016_J014057.03-114059.48.yml  Banados2016_J024003.82+173244.93.yml  Banados2016_J025040.58-025502.82.yml  Banados2016_J031710.42-263315.71.yml  Banados2016_J033550.53-154744.50.yml  Banados2016_J044407.73-043333.07.yml  Banados2016_J044548.18-021959.84.yml  Banados2016_J050344.56-073022.07.yml  Banados2016_J071346.31+085532.65.yml  Banados2016_J081054.32+510540.05.yml  Banados2016_J082907.62+030356.56.yml  Banados2016_J090328.91-135001.27.yml  Banados2016_J114138.20-201555.65.yml  Banados2016_J121721.34+013142.47.yml  Banados2016_J135649.41-264230.23.yml  Banados2016_J141327.12-223342.25.yml  Banados2016_J143140.45-072443.47.yml  Banados2016_J151444.91+211419.84.yml  Banados2016_J154509.90+163631.94.yml  Banados2016_J160945.53-125854.11.yml  Banados2016_J174800.51+224652.38.yml  Banados2016_J193207.62+713908.46.yml  Banados2016_J224049.00-183943.81.yml  Banados2019a_J134208.11+092838.61.yml  Banados2021_J112925.37+184624.33.yml  Banados2022_J000009.99-041626.09.yml  Banados2022_J000019.33-181409.64.yml  (+259 more)
(+240 files in other folders)
